--- a/contributing.adoc
+++ b/contributing.adoc
@@ -1,6 +1,5 @@
-[[developers]]
-Developer's Guide
-=================
+[[contributing]]
+= Contributing to Camel K
 
 We love contributions!
 
@@ -50,7 +49,7 @@ This is a high level overview of the project structure:
 | link:/cmd[/cmd]			| Contains the entry points (the *main* functions) for the **camel-k** binary and the **kamel** client tool.
 | link:/build[/build]		| Contains scripts used during make operations for building the project.
 | link:/deploy[/deploy]		| Contains Kubernetes resource files that are used by the **kamel** client during installation. The `/deploy/resources.go` file is kept in sync with the content of the directory (`make build-embed-resources`), so that resources can be used from within the go code.
-| link:/docs[/docs]			| Contains this documentation.
+| link:/docs[/docs]			| Contains the documentation website based on https://antora.org/[Antora].
 | link:/pkg[/pkg]			| This is where the code resides. The code is divided in multiple subpackages.
 | link:/runtime[/runtime]	| The Java runtime code that is used inside the integration Docker containers.
 | link:/test[/test]			| Include integration tests to ensure that the software interacts correctly with Kubernetes and OpenShift.
